<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jobper</string>
    
    <string name="action_jobs">Jobs</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_info">Info</string>
    <string name="action_info_text">Jobper is a job finder mobile client based on AngelList platform and developed by @vicmonmena</string>
    <string name="action_notification_config">Notification</string>
    <string name="action_share">Share</string>

    <string name="job_title_hint">No title</string>
    <string name="job_date_hint">No date</string>
    <string name="show_job_details">Show job details</string>
    
    
    <string name="job_details_title_hint">No title</string>
    <string name="job_details_published_hint">No published date</string>
    <string name="job_details_salarymin_hint">No salary min</string>
    <string name="job_details_salarymax_hint">No salary max</string>
    
    <string name="job_details_startup_hint">No startup name</string>
    <string name="job_details_location_hint">No location</string>
    <string name="job_details_product_desc_hint">No product description</string>
    <string name="job_details_job_role_hint">No job role</string>

    <string name="loading_job_details">Loading&#8230;</string>
    
    <string name="job_details_published_lbl">Published:</string>
    <string name="job_details_salary_min_lbl">Min. Salary:</string>
    <string name="job_details_salary_max_lbl">Max. Salary:</string>
    <string name="job_details_location_lbl">Location:</string>
    <string name="job_details_job_type_lbl">Job Type:</string>
    <string name="cd_marked_as_favorite">Marked as Favorite</string>
    <string name="cd_unmarked_as_favorite">Unmarked as Favorite</string>
    <string name="cd_company_logo">Company logo</string>
    
    <string name="menu_share_job">Share job</string>

    <string name="msg_uri_not_found">Any URL company</string>
    
    <string name="msg_new_job_offer">New job offer</string>
    <string name="msg_from_jobper">from #jobper</string>
    
    <string name="notification_update">A favorite Job has been updated!</string>
    <string name="notification_delete">A favorite Job has been deleted!</string>
    <string name="notification_no_changes">Your favorite Jobs are waiting for you!</string>
    <string name="notification_no_changes_content">Take a look to your favorite Jobs!</string>
    
    <!-- preferences -->
    <string name="notification_category_title">Notifications</string>
    <string name="notification_config_summary">How often do you want to check the state of your favorite Jobs?</string>
    <string name="notification_config_dialog_title">Select frequency</string>
    <string name="notification_config_title">Checking Frequency</string>
    
    <string name="jobs_category_title">Jobs</string>
    <string name="jobs_config_summary">How many Jobs do you want to list?</string>
    <string name="jobs_config_dialog_title">Select a number of Jobs</string>
    <string name="jobs_config_title">Number of Jobs</string>
    
</resources>
