<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp">

    <TextView
        android:id="@+id/jobTitleTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:hint="@string/job_title_hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/jobDateTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/jobTitleTextView"
        android:hint="@string/job_date_hint"
        android:textColor="#c27ba0"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageArrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/jobDateTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/show_job_details"
        android:src="@drawable/ic_arrow" />

</RelativeLayout>
