<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp" >
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_weight="1">

        <TextView
            android:id="@+id/jobTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:hint="@string/job_title_hint"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/jobDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/job_date_hint"
            android:maxLines="1"
            android:textColor="#c27ba0"
            android:textSize="16sp" />
    
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/job_row_image_item" 
        android:contentDescription="@string/show_job_details"/>

</LinearLayout>
